--- a/style.css
+++ b/style.css
@@ -15,3 +15,25 @@ body {
 footer{
     text-align: center;
 }
+/* HTML: <div class="loader"></div> */
+.loader {
+  font-weight: bold;
+  font-family: monospace;
+  font-size: 30px;
+  display: inline-grid;
+  overflow: hidden;
+}
+.loader:before,
+.loader:after {
+  content: "Loading...";
+  grid-area: 1/1;
+  clip-path: inset(0 -200% 50%);
+  text-shadow: -10ch 0 0;
+  animation: l12 1s infinite;
+}
+.loader:after {
+  clip-path: inset(50% -200% 0%);
+  text-shadow: 10ch 0 0;
+  --s:-1;
+}
+@keyframes l12 {50%,100%{transform: translateX(calc(var(--s,1)*100%));}}
